--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@heroicons/react": "^2.1.3",
     "@vercel/analytics": "^1.3.1",
     "@vercel/speed-insights": "^1.0.12",
+    "cssnano": "^7.0.5",
     "preline": "^2.1.0",
     "process": "^0.11.10",
     "react": "^18.2.0",
